# lexical-sort

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml
benches/: bench_sorting.rs  comparing.rs
docs/: Diagrams.ods
src/: cmp.rs  iter.rs  lib.rs
