[package]
name = "lexical-sort"
version = "0.3.0-pre.1"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "Sort Unicode strings lexically"
categories = ["text-processing", "internationalization"]
documentation = "https://docs.rs/lexical-sort"
homepage = "https://lib.rs/crates/lexical-sort"
repository = "https://github.com/Aloso/lexical-sort"
readme = "README.md"
exclude = ["docs/**", "deny.toml"]
edition = "2018"

keywords = [
  "Unicode",
  "ASCII",
  "transliteration",
  "lexicographical",
  "sort",
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_ascii = "0.1.5"

[dev-dependencies]
criterion = "0.3"
alphanumeric-sort = "1.1"

[[bench]]
name = "comparing"
path = "benches/comparing.rs"
harness = false
